created an HTML structure for home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 <body>
     <header>
         <h1>Recipe Book</h1>
+        <nav>
+            <ul>
+                <a href=""><li>Home</li></a>
+                <a href=""><li>Recipes</li></a>
+                <a href=""><li>Suggestions</li></a>
+            </ul>
+        </nav>
     </header>
+    <section>
+        Bannerimage
+    </section>
+    <footer>
+        &copy; 2025 Recipe Book
+    </footer>
 </body>
 </html>
