create home , recipes and suggestions page and link them

--- a/recipes.html
+++ b/recipes.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <section>
-        Bannerimage
+        Recipes
     </section>
     <footer>
         &copy; 2025 Recipe Book
