--- a/suggestions.html
+++ b/suggestions.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <section>
-        Bannerimage
+        Suggestions
     </section>
     <footer>
         &copy; 2025 Recipe Book
