added home page image and worked on styling

--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe World</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+
 </head>
 <body>
     <header>
-        <h1>Recipe Book</h1>
+        <h1>RECIPE WORLD</h1>
         <nav>
             <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="recipes.html"><li>Recipes</li></a>
-                <a href="suggestions.html"><li>Suggestions</li></a>
+                <a href="index.html"><li>HOME</li></a>
+                <a href="recipes.html"><li>RECIPES</li></a>
+                <a href="suggestions.html"><li>SUGGEST</li></a>
             </ul>
         </nav>
     </header>
-    <section>
-        Bannerimage
+    <section class="home-image">
+        <a href="" class="link-recipe">
+            <h2>FEATURED: LASAGNA</h2>
+            <img src="" alt="Pasta" class="center-image">
+        </a>
     </section>
     <footer>
         &copy; 2025 Recipe Book
