--- a/recipes.html
+++ b/recipes.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <h1>Recipe Book</h1>
+        <h1>RECIPE WORLD</h1>
         <nav>
             <ul>
-                <a href="index.html"><li>Home</li></a>
-                <a href="recipes.html"><li>Recipes</li></a>
-                <a href="suggestions.html"><li>Suggestions</li></a>
+                <a href="index.html"><li>HOME</li></a>
+                <a href="recipes.html"><li>RECIPES</li></a>
+                <a href="suggestions.html"><li>SUGGEST</li></a>
             </ul>
         </nav>
     </header>
