--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <section class="home-image">
         <a href="" class="link-recipe">
             <h2>FEATURED: LASAGNA</h2>
-            <img src="" alt="Pasta" class="center-image">
+            <img src="assets/images/pexels-miltonphotography-35123972.jpg" alt="Pasta" class="center-image">
         </a>
     </section>
     <footer>
-        &copy; 2025 Recipe Book
+        &copy; 2025 RECIPE WORLD - MADHURI KAMBLE
     </footer>
 </body>
 </html>
