wrapped header h1 in anchor tag for all pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
+        <a href="recipes.html" class="main">
         <h1>RECIPE WORLD</h1>
+        </a>
         <nav>
             <ul>
                 <a href="index.html"><li>HOME</li></a>
