corrected footer text to have similar text across all pages

--- a/recipes.html
+++ b/recipes.html
@@ -52,7 +52,7 @@
         </div>
     </section>
     <footer>
-        &copy; 2025 Recipe Book
+        &copy; 2025 RECIPE WORLD - MADHURI KAMBLE
     </footer>
 </body>
 </html>
