updated the featured recipe name to Pasta

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <section class="home-image">
         <a href="" class="link-recipe">
-            <h2>FEATURED: LASAGNA</h2>
+            <h2>FEATURED: PASTA</h2>
             <img src="assets/images/pexels-miltonphotography-35123972.jpg" alt="Pasta" class="center-image">
         </a>
     </section>
